# hoishing.github.io

./: .gitignore  404.html  LICENSE  README.md  app-ads.txt  hard-link.py  index.html  mkdocs.yml  objects.inv  package-lock.json  package.json  pump.py  pyproject.toml  sitemap.xml  vite.config.js
.github/workflows/: ci.yml
assets/coverage/: d_a44f0ac069e85531___init___py.html  d_a44f0ac069e85531_test_kng_py.html  status.json
blog/: 2023-10-17-占星為什麼有效.md
blog/2017-08-12-Providing Services On macOS/: index.html
blog/2017-10-10-Create Menu Bar Apps On macOS/: index.html
blog/2017-12-15-Adding Login Items for macOS/: index.html
blog/2017-12-29-Using Javascript with WKWebView/: index.html
blog/2019-04-21-Using Chinese Characters in Matplotlib/: index.html
blog/2020-10-27-cangjie/: index.html
blog/2020-12-14-auto-format-svelte-in-vscode/: index.html
docs/: index.md  privacy.md
docs/assets/: coverage-report.xml
docs/blog/: 2017-08-12-Providing Services On macOS.md  2017-10-10-Create Menu Bar Apps On macOS.md  2017-12-15-Adding Login Items for macOS.md  2017-12-29-Using Javascript with WKWebView.md  2019-04-21-Using Chinese Characters in Matplotlib.md  2020-10-27-cangjie.md  2020-12-14-auto-format-svelte-in-vscode.md  2023-09-26-AVSpeechSynthesisVoice Fall Back Mechanism.md
docs/proj/: buddhism-objc.md  cangjie.md  cell-navigation.md  doc2txt.md  gdata-static-lib.md  icon-resize-cli.md  icon-resize.md  (+14 more)
forum/: dime_cangjie.txt
overrides/: main.html
privacy/: index.html
search/: search_index.json
src/: App.jsx  main.jsx
stylesheets/: extra.css
(+23 files in other folders)
