[tool.poetry]
name = "hoishing-github-io"
version = "0.1.0"
description = ""
authors = ["Kelvin Ng <hoishing@gmail.com>"]
readme = "README.md"
packages = [{ include = "hoishing" }]
package-mode = false

[tool.poetry.dependencies]
python = "^3.11, <3.12"
mkdocs-material = "^9.1.13"
mkdocstrings = "^0.21.2"
pillow = "^9.5.0"
cairosvg = "^2.7.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
