[tool.poetry]
name = "hoishing-github-io"
version = "0.1.0"
description = ""
authors = ["Kelvin Ng <hoishing@gmail.com>"]
readme = "README.md"
package-mode = false

[tool.poetry.dependencies]
python = "^3.12"
mkdocs-material = "^9.1.13"
pillow = "^9.5.0"
cairosvg = "^2.7.0"
mkdocstrings = { extras = ["python"], version = "^0.25.2" }


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
