[tool.poetry]
name = "hoishing-github-io"
version = "0.1.0"
description = ""
authors = ["Kelvin Ng <hoishing@gmail.com>"]
readme = "README.md"
package-mode = false

[tool.poetry.dependencies]
python = "^3.12"
mkdocs-material = {extras = ["imaging"], version = "^9.5.31"}
mkdocstrings = { extras = ["python"], version = "^0.25.2" }


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
